--- a/index.html
+++ b/index.html
@@ -24,20 +24,18 @@
        <img src="assets/img/placeholder.jpg" class="profile" />
 
        <!-- UPDATE THIS -->
-       <h1>Your Name</h1>
+       <h1>Aidan Kulikowski</h1>
      </header>
 
      <section class="container">
        <!-- UPDATE THIS -->
        <p>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-         et justo sed tellus auctor vehicula. Mauris molestie hendrerit
-         accumsan.
-       </p>
-       <p>
-         Vivamus ligula enim, hendrerit vitae sodales id, molestie quis lorem.
-         Morbi viverra vel eros cursus iaculis. Morbi eleifend nisi sit amet
-         laoreet congue.
+         I am Aidan Kulikowski, and I am an organist and pianist studying at 
+         Saint Paul of the Cross Catholic Church in Park Ridge, Illinois. I will be
+         majoring in music performance and possibly choral direction if there is something 
+         like that. After my College, I will create a great music organization called 
+         "The Koolest Music" and we will host organ, piano, and choral concerts every
+         week played by awesome musicians. 
        </p>
      </section>
 
