--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
    <!-- UPDATE THIS -->
-   <title>Your Name Here: Splash Page</title>
+   <title>Aidan Kulikowski: Splash Page</title>
 
    <meta name="description" content="" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,7 +21,8 @@
    <div class="wrapper">
      <header class="container">
        <!-- UPDATE THIS -->
-       <img src="assets/img/placeholder.jpg" class="profile" />
+       <img src="assets/img/koolorganistprofile.jpg" class="profile" />
+
 
        <!-- UPDATE THIS -->
        <h1>Aidan Kulikowski</h1>
@@ -30,7 +31,7 @@
      <section class="container">
        <!-- UPDATE THIS -->
        <p>
-         I am Aidan Kulikowski, and I am an organist and pianist studying at 
+         I am Aidan Kulikowski, and I am an organist and pianist currently studying at 
          Saint Paul of the Cross Catholic Church in Park Ridge, Illinois. I will be
          majoring in music performance and possibly choral direction if there is something 
          like that. After my College, I will create a great music organization called 
@@ -41,10 +42,7 @@
 
      <footer class="container">
        <!-- UPDATE THIS -->
-       <a href=""><i class="fab fa-instagram"></i></a>
-       <a href=""><i class="fab fa-twitter"></i></a>
-       <a href=""><i class="fab fa-facebook-f"></i></a>
-       <a href=""><i class="fab fa-twitch"></i></a>
+       <a href="https://www.instagram.com/koolorganist"><i class="fab fa-instagram"></i></a>s
      </footer>
    </div>
  </body>
